added 1st page to index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <ul class="nav">
           <li class="name">Jane Smith</li>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Photos</a></li>
+          <li><a href="resume.html">Sreeja's Experience</a></li>
+          <li><a href="#">Sreeja's Experience</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
     </div>
